二手拍卖版块完成

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,9 @@
                     启动中...
                 </div>
             </div>
-            <a href="javascript:void(0)">查看更多&gt;</a>
+            <div class="index_right_more">
+                <a href="javascript:void(0)">查看更多&gt;</a>
+            </div>
         </div>
         <div class="index_time_to_buy clearfix wrap">
             <div class="index_time_to_buy_left_box">
@@ -1230,6 +1232,9 @@
         <div class="zd_index_boom wrap clearfix">
             <div class="zd_index_boom_tit clearfix">
                 <p>二手拍卖</p>
+                <div class="index_right_more">
+                    <a href="javascript:void(0)">查看更多&gt;</a>
+                </div>
             </div>
             <div class="index_time_to_buy_left_box clearfix">
                 <div class="index_time_to_buy_left" style="height: 280px;">
@@ -1245,76 +1250,128 @@
             </div>
             <div class="zd_index_boom_swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
+                    <div class="swiper-slide clearfix">
+                        <a href="javascript:void(0)" class="clearfix">
+                            <img src="images/zd_index_boom1.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">欧米茄</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown1">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥49800</span>
+                                    <span class="index_boom_del">¥166,300</span>
+                                </div>
+                            </div>
                         </a>
                         <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            2
+                            <img src="images/zd_index_boom2.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">积家</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown2">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥77000</span>
+                                    <span class="index_boom_del">¥132,000</span>
+                                </div>
+                            </div>
                         </a>
                         <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            3
+                            <img src="images/zd_index_boom3.jpg">
+                            <i class="index_boom_label">未使用</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">海鸥</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown3">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥15800</span>
+                                    <span class="index_boom_del">¥59,800</span>
+                                </div>
+                            </div>
                         </a>
                         <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            4
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
+                            <img src="images/zd_index_boom4.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">江诗丹顿</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown4">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥70000</span>
+                                    <span class="index_boom_del">¥14,300</span>
+                                </div>
+                            </div>
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="javascript:void(0)">
-                            <img src="" alt="">
-                            1
+                            <img src="images/zd_index_boom5.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">卡地亚</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown5">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥24500</span>
+                                    <span class="index_boom_del">¥60,000</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <img src="images/zd_index_boom6.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">劳力士</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown6">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥59900</span>
+                                    <span class="index_boom_del">¥59,900</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <img src="images/zd_index_boom7.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">积家</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown7">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥77000</span>
+                                    <span class="index_boom_del">¥132,000</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <img src="images/zd_index_boom8.jpg">
+                            <i class="index_boom_label">9.5新</i>
+                            <div class="index_boom_info">
+                                <p class="index_boom_tit">爱彼</p>
+                                <div class="index_boom_time_box">
+                                    <i class="index_boom_time_icon"></i>
+                                    <p class="index_boom_countDown boom_countDown8">加载中</p>
+                                </div>
+                                <div class="index_boom_money">
+                                    <span class="index_boom_price">¥94400</span>
+                                    <span class="index_boom_del">¥142,000</span>
+                                </div>
+                            </div>
                         </a>
                     </div>
                 </div>
