时尚腕表 运动、智能表 排行榜版块完成

--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
         <!-- 二手拍卖开始 -->
         <div class="zd_index_boom wrap clearfix">
             <div class="zd_index_boom_tit clearfix">
-                <p>二手拍卖</p>
+                <p style="color: #cc5252;">二手拍卖</p>
                 <div class="index_right_more">
                     <a href="javascript:void(0)">查看更多&gt;</a>
                 </div>
@@ -1378,8 +1378,355 @@
                 <div class="zd_index_boom_swiper-button-next"></div>
                 <div class="zd_index_boom_swiper-button-prev"></div>
             </div>
-            <!-- 二手拍卖结束 -->
         </div>
+        <!-- 二手拍卖结束 -->
+        <!-- 时尚腕表开始 -->
+        <div class="zd_index_boom wrap clearfix">
+            <i class="index_tab_btns_left"></i>
+            <i class="index_tab_btns_right"></i>
+            <div class="zd_index_boom_tit clearfix">
+                <p>时尚腕表</p>
+                <ul>
+                    <li>明星同款
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="index_time_to_buy_left_box clearfix">
+                <div class="index_time_to_buy_left" style="height:360px;">
+                    <a href="javascript:void(0)">
+                        <div class="index_time_to_buy_left_txt">
+                            <p class="index_time_to_buy_left_txt1">雷米格：影帝马德钟同款</p>
+                            <p class="index_time_to_buy_left_txt2">镂空轮盘，一局定输赢</p>
+                        </div>
+                        <i class="index_time_to_buy_left_shadow"></i>
+                        <img src="images/index_time_to_buy_left4.jpg">
+                    </a>
+                </div>
+            </div>
+            <div class="index_boom_list_right clearfix">
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right1.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right2.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right3.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_boom_list_right4.jpg">
+                </a>
+            </div>
+        </div>
+        <!-- 时尚腕表结束 -->
+        <!-- 运动、智能表开始 -->
+        <div class="zd_index_boom wrap clearfix">
+            <i class="index_tab_btns_left"></i>
+            <i class="index_tab_btns_right"></i>
+            <div class="zd_index_boom_tit clearfix">
+                <p>运动、智能表</p>
+                <ul>
+                    <li>领券更优惠
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="index_time_to_buy_left_box clearfix">
+                <div class="index_time_to_buy_left" style="height:360px;">
+                    <a href="javascript:void(0)">
+                        <div class="index_time_to_buy_left_txt">
+                            <p class="index_time_to_buy_left_txt1">旅行者的专业配备</p>
+                            <p class="index_time_to_buy_left_txt2">艾沛勒 AlpinerX，超长2年续航</p>
+                        </div>
+                        <i class="index_time_to_buy_left_shadow"></i>
+                        <img src="images/index_star_list_right5.jpg">
+                    </a>
+                </div>
+            </div>
+            <div class="index_boom_list_right clearfix">
+                <a href="javascropt:void(0)">
+                    <img src="images/index_sport_list_right1.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_sport_list_right2.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_sport_list_right3.jpg">
+                </a>
+                <a href="javascropt:void(0)">
+                    <img src="images/index_sport_list_right4.jpg">
+                </a>
+            </div>
+        </div>
+        <!-- 运动、智能表结束 -->
+        <!-- 排行榜开始 -->
+        <div class="zd_index_boom wrap clearfix">
+            <div class="index_boom_tab_btns">
+                <i class="index_tab_btns_left"></i>
+                <i class="index_tab_btns_right"></i>
+            </div>
+            <div class="zd_index_boom_tit clearfix">
+                <p>排行榜</p>
+                <ul>
+                    <li>男表
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                    <li>女表
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                    <li>潮表
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                </ul>
+                <div class="index_right_more">
+                    <a href="javascript:void(0)">查看更多&gt;</a>
+                </div>
+            </div>
+            <div class="index_chart_tab">
+                <div class="index_time_to_buy_left_box clearfix">
+                    <div class="index_time_to_buy_left" style="height: 280px;">
+                        <a href="javascript:void(0)">
+                            <div class="index_time_to_buy_left_txt">
+                                <p class="index_time_to_buy_left_txt1">年轻就要勇于挑战</p>
+                                <p class="index_time_to_buy_left_txt2">少量库存，每满300减30</p>
+                            </div>
+                            <i class="index_time_to_buy_left_shadow"></i>
+                            <img src="images/index_chart_list1.jpg">
+                        </a>
+                    </div>
+                    <div class="index_chart_list_center clearfix">
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_number">NO.1</i>
+                            <img src="images/index_chart_list_center1.jpg">
+                            <div class="index_chart_list_txt">
+                                <img src="images/index_chart_list_txt.png">
+                                <p class="index_chart_list_tit">赫柏林 City 都市系列</p>
+                                <span class="index_chart_p1">¥4350</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">销量1403</span>
+                                <div class="index_list_btn">立即查看</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="index_chart_list_right clearfix">
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.2</i>
+                            <img src="images/index_chart_list_right1.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>SevenFriday M系列</p>
+                                <span class="index_chart_p1">¥4350</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>1403</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.3</i>
+                            <img src="images/index_chart_list_right2.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>美度 指挥官 COMMANDER系列</p>
+                                <span class="index_chart_p1">¥8160</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>376</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.4</i>
+                            <img src="images/index_chart_list_right3.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>百年灵 复仇者系列</p>
+                                <span class="index_chart_p1">¥23800</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>3</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.5</i>
+                            <img src="images/index_chart_list_right4.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>积家 Master Control系列</p>
+                                <span class="index_chart_p1">¥59500</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>167</span>
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="index_time_to_buy_left_box clearfix" style="display: none;">
+                    <div class="index_time_to_buy_left" style="height: 280px;">
+                        <a href="javascript:void(0)">
+                            <div class="index_time_to_buy_left_txt">
+                                <p class="index_time_to_buy_left_txt1">法国奢侈品</p>
+                                <p class="index_time_to_buy_left_txt2">陈乔恩同款</p>
+                            </div>
+                            <i class="index_time_to_buy_left_shadow"></i>
+                            <img src="images/index_chart_list2.jpg">
+                        </a>
+                    </div>
+                    <div class="index_chart_list_center clearfix">
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_number">NO.1</i>
+                            <img src="images/index_chart_list_center2.jpg">
+                            <div class="index_chart_list_txt">
+                                <img src="images/index_chart_list_txt2.png">
+                                <p class="index_chart_list_tit">爱宝时  Ladies 女士系列</p>
+                                <span class="index_chart_p1">¥6780</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">销量465</span>
+                                <div class="index_list_btn">立即查看</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="index_chart_list_right clearfix">
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.2</i>
+                            <img src="images/index_chart_list_right5.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>西铁城  光动能女表系列</p>
+                                <span class="index_chart_p1">¥2412</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>131</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.3</i>
+                            <img src="images/index_chart_list_right6.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>阿玛尼  GIANNI T-B系列</p>
+                                <span class="index_chart_p1">¥3271</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>466</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.4</i>
+                            <img src="images/index_chart_list_right7.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>梵德宝  NEB-K宫廷系列</p>
+                                <span class="index_chart_p1">¥3535</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>206</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.5</i>
+                            <img src="images/index_chart_list_right8.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>世纪  AFFINITY系列</p>
+                                <span class="index_chart_p1">¥20300</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>6</span>
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="index_time_to_buy_left_box clearfix" style="display: none;">
+                    <div class="index_time_to_buy_left" style="height: 280px;">
+                        <a href="javascript:void(0)">
+                            <div class="index_time_to_buy_left_txt">
+                                <p class="index_time_to_buy_left_txt1">年轻就要勇于挑战</p>
+                                <p class="index_time_to_buy_left_txt2">少量库存，每满300减30</p>
+                            </div>
+                            <i class="index_time_to_buy_left_shadow"></i>
+                            <img src="images/index_chart_list3.jpg">
+                        </a>
+                    </div>
+                    <div class="index_chart_list_center clearfix">
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_number">NO.1</i>
+                            <img src="images/index_chart_list_center3.jpg">
+                            <div class="index_chart_list_txt">
+                                <img src="images/index_chart_list_txt3.png">
+                                <p class="index_chart_list_tit">精工  Prospex系列</p>
+                                <span class="index_chart_p1">¥3220</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">销量0</span>
+                                <div class="index_list_btn">立即查看</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="index_chart_list_right clearfix">
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.2</i>
+                            <img src="images/index_chart_list_right9.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>SevenFriday  M系列</p>
+                                <span class="index_chart_p1">¥12000</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>131</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.3</i>
+                            <img src="images/index_chart_list_right10.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>天铭  经典系列</p>
+                                <span class="index_chart_p1">¥3880</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>12</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.4</i>
+                            <img src="images/index_chart_list_right11.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>漫威  钢铁侠系列</p>
+                                <span class="index_chart_p1">¥1980</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>87</span>
+                                </span>
+                            </div>
+                        </a>
+                        <a href="javascript:void(0)">
+                            <i class="index_chart_num">N0.5</i>
+                            <img src="images/index_chart_list_right12.jpg">
+                            <div class="index_chart_list_right_hide">
+                                <p>拓天马  Saxon One 都市系列</p>
+                                <span class="index_chart_p1">¥35200</span>
+                                <span>/</span>
+                                <span class="index_chart_p2">
+                                    销量
+                                    <span>6</span>
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 排行榜结束 -->
         <!-- 主体部分结束 -->
 
         <!-- 万表网尾部开始 -->
