品牌馆版块开始

--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
                             <img src="images/index_chart_list_center2.jpg">
                             <div class="index_chart_list_txt">
                                 <img src="images/index_chart_list_txt2.png">
-                                <p class="index_chart_list_tit">爱宝时  Ladies 女士系列</p>
+                                <p class="index_chart_list_tit">爱宝时 Ladies 女士系列</p>
                                 <span class="index_chart_p1">¥6780</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">销量465</span>
@@ -1594,7 +1594,7 @@
                             <i class="index_chart_num">N0.2</i>
                             <img src="images/index_chart_list_right5.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>西铁城  光动能女表系列</p>
+                                <p>西铁城 光动能女表系列</p>
                                 <span class="index_chart_p1">¥2412</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1607,7 +1607,7 @@
                             <i class="index_chart_num">N0.3</i>
                             <img src="images/index_chart_list_right6.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>阿玛尼  GIANNI T-B系列</p>
+                                <p>阿玛尼 GIANNI T-B系列</p>
                                 <span class="index_chart_p1">¥3271</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1620,7 +1620,7 @@
                             <i class="index_chart_num">N0.4</i>
                             <img src="images/index_chart_list_right7.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>梵德宝  NEB-K宫廷系列</p>
+                                <p>梵德宝 NEB-K宫廷系列</p>
                                 <span class="index_chart_p1">¥3535</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1633,7 +1633,7 @@
                             <i class="index_chart_num">N0.5</i>
                             <img src="images/index_chart_list_right8.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>世纪  AFFINITY系列</p>
+                                <p>世纪 AFFINITY系列</p>
                                 <span class="index_chart_p1">¥20300</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1661,7 +1661,7 @@
                             <img src="images/index_chart_list_center3.jpg">
                             <div class="index_chart_list_txt">
                                 <img src="images/index_chart_list_txt3.png">
-                                <p class="index_chart_list_tit">精工  Prospex系列</p>
+                                <p class="index_chart_list_tit">精工 Prospex系列</p>
                                 <span class="index_chart_p1">¥3220</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">销量0</span>
@@ -1674,7 +1674,7 @@
                             <i class="index_chart_num">N0.2</i>
                             <img src="images/index_chart_list_right9.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>SevenFriday  M系列</p>
+                                <p>SevenFriday M系列</p>
                                 <span class="index_chart_p1">¥12000</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1687,7 +1687,7 @@
                             <i class="index_chart_num">N0.3</i>
                             <img src="images/index_chart_list_right10.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>天铭  经典系列</p>
+                                <p>天铭 经典系列</p>
                                 <span class="index_chart_p1">¥3880</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1700,7 +1700,7 @@
                             <i class="index_chart_num">N0.4</i>
                             <img src="images/index_chart_list_right11.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>漫威  钢铁侠系列</p>
+                                <p>漫威 钢铁侠系列</p>
                                 <span class="index_chart_p1">¥1980</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1713,7 +1713,7 @@
                             <i class="index_chart_num">N0.5</i>
                             <img src="images/index_chart_list_right12.jpg">
                             <div class="index_chart_list_right_hide">
-                                <p>拓天马  Saxon One 都市系列</p>
+                                <p>拓天马 Saxon One 都市系列</p>
                                 <span class="index_chart_p1">¥35200</span>
                                 <span>/</span>
                                 <span class="index_chart_p2">
@@ -1727,6 +1727,91 @@
             </div>
         </div>
         <!-- 排行榜结束 -->
+        <!-- 品牌馆开始 -->
+        <div class="zd_index_boom wrap clearfix">
+            <div class="index_boom_tab_btns">
+                <i class="index_tab_btns_brand_left"></i>
+                <i class="index_tab_btns_brand_right"></i>
+            </div>
+            <div class="zd_index_boom_tit clearfix">
+                <p>品牌馆</p>
+                <ul>
+                    <li>高级
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                    <li>顶级
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                    <li>奢华
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                    <li>轻奢
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                    <li>时尚
+                        <i class="index_shape_of_jiao"></i>
+                    </li>
+                </ul>
+                <div class="index_right_more">
+                    <a href="javascript:void(0)">查看更多&gt;</a>
+                </div>
+            </div>
+            <div class="index_brand_tabList clearfix">
+                <div class="index_brand_tab clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab1.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above1.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab2.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above2.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab3.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above3.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab4.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above4.jpg">
+                        </p>
+                    </a>
+                </div>
+                <div class="index_brand_imgList clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList1.jpg">
+                        <p class="index_brand_tabList_hover">百达翡丽</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList2.jpg">
+                        <p class="index_brand_tabList_hover">江诗丹顿</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList3.jpg">
+                        <p class="index_brand_tabList_hover">亨利慕时</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList4.jpg">
+                        <p class="index_brand_tabList_hover">宝玑</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList5.jpg">
+                        <p class="index_brand_tabList_hover">宝珀</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList6.jpg">
+                        <p class="index_brand_tabList_hover">伯爵</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- 品牌馆结束 -->
         <!-- 主体部分结束 -->
 
         <!-- 万表网尾部开始 -->
